<?xml version="1.0" encoding="utf-8" ?>
<!-- https://developer.android.com/guide/fragments/appbar -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/ingredients"
        android:title="@string/ingredients"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/recipes"
        android:title="@string/recipes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/meals"
        android:title="@string/meal_plan"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/shopping"
        android:title="@string/shopping"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/location_manager"
        android:title="@string/location_nav"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ing_category_manager"
        android:title="@string/ing_cat_nav"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/recipe_category_manager"
        android:title="@string/rec_cat_nav"
        app:showAsAction="ifRoom" />



</menu>
