<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <EditText
        android:id="@+id/recipe_title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title_hint"
        android:inputType="textPersonName"
        android:padding="10dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/comments"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/comments_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="@string/comments_hint"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/category_text_view"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/category"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/serving_sizeTextView"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/serving_size"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/serving_size_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/serving_size_hint"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/prep_timeTextView"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:text="@string/prep_time"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/prep_time_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="60"
            android:inputType="number"/>
    </LinearLayout>
    <TextView
        android:id="@+id/DateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        android:text="@string/recipe_ingredients"
        android:textAlignment="center"
        android:textSize="25sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ingredient_text_view"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:text="" />
        <Spinner
            android:id="@+id/recipe_ingredient_spinner"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/recipe_add_ingredient_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="#00FF00"
            android:textColor="#FFFFFF"
            android:text="+" />
    </LinearLayout>
    <ListView
        android:id="@+id/ing_list"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    </ListView>
    <Button
        android:id="@+id/recipe_delete_ingredient_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="Remove Ingredient" />

    <ImageView
        android:id="@+id/recipe_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher_background" />
</LinearLayout>