<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="64dp"
        android:background="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/activity_login_form_title"
                android:textAlignment="center"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_form_username"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/activity_login_usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_form_password"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/activity_login_passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/activity_login_loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_form_login"
                android:textSize="22sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>