<?xml version="1.0" encoding="utf-8"?>
<!-- For making layout scrollable:
https://stackoverflow.com/questions/4055537/how-do-you-make-a-linearlayout-scrollable
Answer by Bryan Denny (2010), edited by akelec (2020). Accessed 2022-11-24 -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            xmlns:app="http://schemas.android.com/apk/res-auto">


            <TextView
                android:id="@+id/recipe_title_view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipe_title_hint"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:fontFamily="@font/arvo_bold"
                />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/comments"
                    android:textSize="15sp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    app:fontFamily="sans-serif-medium"/>
                <TextView
                    android:id="@+id/comments_view_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="25dp"
                    android:textColor="@color/black"
                    android:hint="@string/comments_hint"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/category_text_view"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/category"
                    android:textSize="15sp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    app:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/category_view_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="25dp"
                    android:text="category_value"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/serving_sizeTextView"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/serving_size"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    app:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/serving_size_view_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/serving_size_hint"
                    android:paddingHorizontal="25dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:layout_marginTop = "10dp"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prep_timeTextView"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingVertical="10dp"
                    android:text="@string/prep_time"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    app:fontFamily="sans-serif-medium"/>
                <TextView
                    android:id="@+id/prep_time_view_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="25dp"
                    android:hint="60"
                    android:textColor="@color/black"
                    android:layout_marginTop = "10dp"
                    android:inputType="number"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/DateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/recipe_ingredients"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:fontFamily="@font/arvo_bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>
            <ListView
                android:id="@+id/ing_list"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </ListView>

            <ImageView
                android:id="@+id/recipe_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher_background" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>